Fixes visibility of pending invitations
While working on documentation updates, I realized we weren't displaying invitations appropriately.

--- a/frontend/css/user_detail.css
+++ b/frontend/css/user_detail.css
@@ -465,6 +465,10 @@ section .orgs {
   justify-content: flex-end;
 }
 
+.org-list .invite .actions {
+  flex: 0 0 auto;
+}
+
 .org-empty {
   width: 100%;
   text-align: center;
